@@ -1,5 +1,9 @@
 using SDK to manage JAVA versions `sdk env init` and `sdk env`
 
-# 1. How to run java file
+Le
+## 1. How to run java file
 . compiling `javac filename.java`
 . execution `java filename`
+
+## New Java Features
+`java --enable-preview --source 21 FirstSample.java`
